Bug 1876354 - Clip table content without changing the formatting context aligning Cards View content and selection. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D199557

--HG--
extra : amend_source : f2e10780dd1a21fd1ebd252f984377fe30b9548a

--- a/mail/themes/shared/mail/tree-listbox.css
+++ b/mail/themes/shared/mail/tree-listbox.css
@@ -640,7 +640,7 @@ table[is="tree-view-table"] tr.selected td.current-cell {
 table[is="tree-view-table"] td {
   max-width: 0;
   height: inherit;
-  overflow: hidden;
+  overflow: clip;
   text-overflow: ellipsis;
   white-space: nowrap;
   padding: 0 6px;
